--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,9 @@
     transform: rotate(360deg);
   }
 }
+.profile-pic{
+  height: 450px;
+  width: 450px;
+  border-radius: 50%;
+  object-fit: cover;
+}
